feat: fix code editor stuck at loading

--- a/web/vscode-web/index.html
+++ b/web/vscode-web/index.html
@@ -85,6 +85,10 @@
             trusted: true
           },
         });
+        
+        if (window.parent !== window) {
+          window.parent.postMessage({ type: 'ready' }, '*');
+        }
       });
     }
 
