feat: show menubar by default for code editor

--- a/web/vscode-web/index.html
+++ b/web/vscode-web/index.html
@@ -67,6 +67,7 @@
           configurationDefaults: {
             "files.autoSave": "off",
             "workbench.colorTheme": "Default Dark+",
+            "window.menuBarVisibility": "visible",
             "remotefs.serverURL": apiURL,
           },
           additionalBuiltinExtensions: [
